# ApexChainx-Contracts

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RUST_TOOLCHAIN_PINNING.md  SECURITY.md  TOOLCHAIN_ACCEPTANCE_CRITERIA.md  deny.toml  justfile
.github/workflows/: ci.yml  fuzz.yml  release-hash.yml  security.yml  testnet-deploy.yml  workflow-lint.yml
apexchainx_calculator/: Cargo.toml
apexchainx_calculator/fuzz/: Cargo.toml
apexchainx_calculator/fuzz/fuzz_targets/: compute_result.rs  validate_config.rs
apexchainx_calculator/src/: calculation.rs  config.rs  config_bundle.rs  config_freeze.rs  governance.rs  history.rs  history_snapshot.rs  lib.rs  metadata.rs  outage_id_tests.rs  tests.rs
docs/: CODEX_CONTEXT.md  PROJECT_CONTEXT.md  config-validation.md
src/features/demo-admin-dashboard/: index.ts  types.ts
tests/: thresholdEdgeCases.test.ts
tooling/: deterministicSeedManagement.ts
tools/: secret-leak-check.ts
ts/: aggregateReadHelper.ts
types/: jest-globals.d.ts
